# demo3

./: .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: ci.yml
notebooks/: demo.ipynb
src/demo3/: __init__.py  main.py
tests/: test_main.py
