[project]
name = "demo3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Haidi Zhou", email = "hackest_zhou@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
